Finally Done?